<resources>
    <string name="app_name">Task List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">List of Tasks</string>
    <string name="second_fragment_label">New Task</string>
    <string name="next">New</string>
    <string name="save">Save</string>

    <string name="new_task_second_fragment">Your Task Name:</string>
    <string name="new_task_description_second_fragment">Your Task Description:</string>
    <string name="new_task_start">Start Date and Time</string>
    <string name="new_task_end">End Date and Time</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="username_used">Username or email is already used</string>
    <string name="sucess_register">Succesfully registered</string>
    <string name="sucess_login">Succesfully loged in</string>
    <string name="fail_login">Failed to log in</string>
    <string name="fail_registe">Failed to register</string>
</resources>