<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="374dp"
            android:layout_height="624dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.435" app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/new_task_second_fragment"
                android:id="@+id/taskName" tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="26dp"/>
        <Spinner
                android:id="@+id/priorityTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/purple_700"
                android:textColor="#ffffff"
                />
        <Spinner
                android:id="@+id/statusTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/purple_700"
                android:textColor="@color/white"
                />

        <TextView
                android:text="@string/new_task_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/startTextView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/startDate" android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="00:00"
                    android:id="@+id/startTime" android:layout_weight="1"/>
        </LinearLayout>
        <TextView
                android:text="@string/new_task_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/endTextView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="@integer/material_motion_duration_medium_1"
                    android:ems="10"
                    android:id="@+id/endDate" android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="00:00"
                    android:id="@+id/endTime" android:layout_weight="1"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:hint="@string/new_task_description_second_fragment"
                android:id="@+id/taskDescription"/>
    </LinearLayout>
    <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.95" tools:ignore="UnknownId"/>



</androidx.constraintlayout.widget.ConstraintLayout>